Fix Critical Crash: Set PiPL integer fields to Big Endian

--- a/cpp/resources/win/AnchorRadialMenu.rc
+++ b/cpp/resources/win/AnchorRadialMenu.rc
@@ -33,73 +33,56 @@ BEGIN
 END
 
 // PiPL Resource
-// CRITICAL: All values are Little Endian. Strings must be byte-swapped per WORD.
-// Flags and Lengths are 32-bit (2 WORDs).
+// CRITICAL: All values must appear as Big Endian in memory.
+// We use Little Endian compiler, so we must swap bytes in the .rc definition.
+// Length 4 -> Memory: 00 00 00 04. RC: 0x0000, 0x0400.
 16000  PiPL  DISCARDABLE
 BEGIN
 	0x0001, 		// Reserved
 	0x0000, 		// kAEGP_PiPL_Version
-	0x0004, 		// Property count: 4
+	0x0400, 		// Property count: 4 (Memory: 00 04 -> 0x0400 in RC)
 	
 	// ----------------------------------------------------------
 	// 1. Kind: 'AEGP'
-	// Type: 'Kind' -> 0x694b 0x646e
+	// Type: 'Kind' -> Memory: 4b 69 6e 64
 	0x694b, 0x646e,
-	// Flags: 0 (32-bit)
+	// Flags: 0
 	0x0000, 0x0000,
-	// Length: 4 (32-bit)
-	0x0004, 0x0000,
-	// Data: 'AEGP' -> 0x4541 0x5047
-	0x4541, 0x5047,
+	// Length: 4 -> Memory: 00 00 00 04
+	0x0000, 0x0400,
+	// Data: 'AEGP' -> Memory: 45 41 47 50
+	0x4145, 0x5047,
 	
 	// ----------------------------------------------------------
 	// 2. Name: "AnchorGrid"
-	// Type: 'Name' -> 0x614e, 0x656d
+	// Type: 'Name' -> Memory: 4e 61 6d 65
 	0x614e, 0x656d,
 	// Flags: 0
 	0x0000, 0x0000,
-	// Length: 12 (0x0C)
-	0x000c, 0x0000,
+	// Length: 12 (0x0C) -> Memory: 00 00 00 0c
+	0x0000, 0x0c00,
 	// Data: "AnchorGrid\0\0"
-	// 'An' 41 6e -> 6e41
-	// 'ch' 63 68 -> 6863
-	// 'or' 6f 72 -> 726f
-	// 'Gr' 47 72 -> 7247
-	// 'id' 69 64 -> 6469
-	// '\0\0'     -> 0000
 	0x6e41, 0x6863, 0x726f, 0x7247, 0x6469, 0x0000,
 
 	// ----------------------------------------------------------
 	// 3. Category: "General"
-	// Type: 'Catg' -> 0x6143, 0x6774
+	// Type: 'Catg' -> Memory: 43 61 74 67
 	0x6143, 0x6774,
 	// Flags: 0
 	0x0000, 0x0000,
-	// Length: 8
-	0x0008, 0x0000,
+	// Length: 8 -> Memory: 00 00 00 08
+	0x0000, 0x0800,
 	// Data: "General\0"
-	// 'Ge' 47 65 -> 6547
-	// 'ne' 6e 65 -> 656e
-	// 'ra' 72 61 -> 6172
-	// 'l\0' 6c 00 -> 006c
 	0x6547, 0x656e, 0x6172, 0x006c,
 
 	// ----------------------------------------------------------
 	// 4. Code: "EntryPointFunc"
-	// Type: 'Cd64' -> 0x6443 0x3436
+	// Type: 'Cd64' -> Memory: 43 64 36 34
 	0x6443, 0x3436,
 	// Flags: 0
 	0x0000, 0x0000,
-	// Length: 16 (0x10)
-	0x0010, 0x0000,
+	// Length: 16 (0x10) -> Memory: 00 00 00 10
+	0x0000, 0x1000,
 	// Data: "EntryPointFunc\0\0"
-	// 'En' 45 6e -> 6e45
-	// 'tr' 74 72 -> 7274
-	// 'yP' 79 50 -> 5079
-	// 'oi' 6f 69 -> 696f
-	// 'nt' 6e 74 -> 746e
-	// 'Fu' 46 75 -> 7546
-	// 'nc' 6e 63 -> 636e
-	// '\0\0'     -> 0000
 	0x6e45, 0x7274, 0x5079, 0x696f, 0x746e, 0x7546, 0x636e, 0x0000
 END
