--- a/cpp/resources/win/AnchorRadialMenu.rc
+++ b/cpp/resources/win/AnchorRadialMenu.rc
@@ -58,7 +58,7 @@ BEGIN
     0x0400,         // Property count = 4 (BE: 00 04 -> RC: 04 00)
     
     // ================================================================
-    // Property 1: Kind = 'AEgp' (AEGP type identifier)
+    // Property 1: Kind = 'AEGP' (AEGP type identifier)
     // ================================================================
     // Type: 'Kind' = 0x4B696E64
     //   BE memory: 4B 69 6E 64
@@ -68,10 +68,10 @@ BEGIN
     0x0000, 0x0000,
     // Length: 4 bytes (BE: 00 00 00 04 -> RC: 0x0000, 0x0400)
     0x0000, 0x0400,
-    // Data: 'AEgp' = 0x41456770
-    //   BE memory: 41 45 67 70
-    //   Words: [4145] [6770] -> RC swapped: 0x4541, 0x7067
-    0x4541, 0x7067,
+    // Data: 'AEGP' = A(0x41) E(0x45) G(0x47) P(0x50)
+    //   BE memory: 41 45 47 50
+    //   Words: [4145] [4750] -> RC swapped: 0x4541, 0x5047
+    0x4541, 0x5047,
     
     // ================================================================
     // Property 2: Name = "AnchorGrid"
