--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -12,6 +12,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - name: Generate PiPL Resource
+      run: |
+        # Run PiPLtool to convert .r to .rc format
+        # PiPLtool.exe <input.r> <output_temp.rc>
+        cpp\resources\PiPLtool.exe cpp\resources\AnchorRadialMenu_PiPL.r cpp\resources\win\AnchorRadialMenu_PiPL_temp.rc
+        
     - name: Configure CMake
       run: cmake -S cpp -B cpp/build -DCMAKE_BUILD_TYPE=Release
       
