Add Native Win32 UI with custom draw grid and blue highlight

--- a/cpp/CMakeLists.txt
+++ b/cpp/CMakeLists.txt
@@ -47,6 +47,7 @@ set(PLUGIN_SOURCES
     src/AnchorRadialMenu.cpp
     src/KeyboardMonitor.cpp
     src/CEPBridge.cpp
+    src/NativeUI.cpp
     ${AE_SDK_PATH}/Util/AEGP_SuiteHandler.cpp
 )
 
@@ -54,6 +55,7 @@ set(PLUGIN_HEADERS
     src/AnchorRadialMenu.h
     src/KeyboardMonitor.h
     src/CEPBridge.h
+    src/NativeUI.h
 )
 
 # ============================================================================
