--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -7,28 +7,17 @@ on:
 
 jobs:
   build-windows:
-    runs-on: windows-latest
+    runs-on: windows-2022
     
     steps:
     - uses: actions/checkout@v3
-    
-    - name: Install Windows SDK 22621 (fixes GDI+ header bugs in 26100)
-      uses: GuillaumeFalourd/setup-windows10-sdk-action@v2
-      with:
-        sdk-version: 22621
-    
-    - name: Setup MSVC with installed SDK
-      uses: ilammy/msvc-dev-cmd@v1
-      with:
-        arch: x64
-        sdk: '10.0.22621.0'
     
     - name: Generate PiPL Resource
       run: |
         cpp\resources\PiPLtool.exe cpp\resources\AnchorRadialMenu_PiPL.r cpp\resources\win\AnchorRadialMenu_PiPL_temp.rc
         
     - name: Configure CMake
-      run: cmake -S cpp -B cpp/build -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_VERSION=10.0.22621.0
+      run: cmake -S cpp -B cpp/build -DCMAKE_BUILD_TYPE=Release
       
     - name: Build Plugin
       run: cmake --build cpp/build --config Release --verbose
