--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -12,12 +12,22 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     
+    - name: Install Windows SDK 22621 via winget
+      run: |
+        winget install Microsoft.WindowsSDK.10.0.22621 --accept-source-agreements --accept-package-agreements --silent
+      
+    - name: Setup MSVC with SDK 22621
+      uses: ilammy/msvc-dev-cmd@v1
+      with:
+        arch: x64
+        sdk: '10.0.22621.0'
+    
     - name: Generate PiPL Resource
       run: |
         cpp\resources\PiPLtool.exe cpp\resources\AnchorRadialMenu_PiPL.r cpp\resources\win\AnchorRadialMenu_PiPL_temp.rc
         
     - name: Configure CMake
-      run: cmake -S cpp -B cpp/build -DCMAKE_BUILD_TYPE=Release
+      run: cmake -S cpp -B cpp/build -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_VERSION=10.0.22621.0
       
     - name: Build Plugin
       run: cmake --build cpp/build --config Release --verbose
