--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   build-windows:
-    runs-on: windows-2022
+    runs-on: windows-latest
     
     steps:
     - uses: actions/checkout@v3
@@ -17,10 +17,13 @@ jobs:
       run: |
         $url = "https://go.microsoft.com/fwlink/?linkid=2196241"
         $installer = "$env:TEMP\winsdksetup.exe"
+        Write-Host "Downloading Windows SDK 22621..."
         Invoke-WebRequest -Uri $url -OutFile $installer
+        Write-Host "Installing Windows SDK 22621..."
         Start-Process -FilePath $installer -ArgumentList "/features OptionId.DesktopCPPx64 /quiet /norestart" -Wait
         Remove-Item $installer
-      
+        Write-Host "SDK 22621 installed successfully"
+    
     - name: Setup MSVC with SDK 22621
       uses: ilammy/msvc-dev-cmd@v1
       with:
@@ -32,11 +35,13 @@ jobs:
         cpp\resources\PiPLtool.exe cpp\resources\AnchorRadialMenu_PiPL.r cpp\resources\win\AnchorRadialMenu_PiPL_temp.rc
         
     - name: Configure CMake
-      run: cmake -S cpp -B cpp/build -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_VERSION=10.0.22621.0
+      run: |
+        cmake -S cpp -B cpp/build -DCMAKE_BUILD_TYPE=Release -DCMAKE_SYSTEM_VERSION=10.0.22621.0
       
-    - name: Build Plugin
-      run: cmake --build cpp/build --config Release --verbose
-      
+    - name: Build Plugin with SDK 22621
+      run: |
+        cmake --build cpp/build --config Release -- /p:WindowsTargetPlatformVersion=10.0.22621.0
+        
     - name: Prepare Artifacts & Installer
       run: |
         mkdir release
